hphp/hack/test/typecheck/coeffect_encapsulation/bad_constraint.php
<?hh

<<file:__EnableUnstableFeatures('context_alias_declaration_short')>>

// defaults </: policied_of
newctx X as [policied_of<int>];
